<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_magnifying_glass_for_searching">image_magnifying_glass_for_searching</string>
    <string name="search_departure_city_minsk">Откуда - Москва</string>
    <string name="search_destination_city_turkish">Куда - Турция</string>
    <string name="text_view_text_fly_away_musically">Музыкально отлететь</string>
    <string name="show_all_places">Показать все места</string>
    <string name="destination_city">Город назначения</string>
    <string name="name_second_name">Имя фамилия</string>
    <string name="artist_photo">Artist photo</string>
    <string name="icon_offer_plane">icon_offer_plane</string>
    <string name="icon_plain_bottom_sheet">icon_plain_bottom_sheet</string>
    <string name="icon_magnifying_glass_for_bottom_sheet">icon_magnifying_glass_for_bottom_sheet</string>
    <string name="phuket">Пхукет</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="complex_path_route">complex path route</string>
    <string name="hot_tickets">Горячие\nбилеты</string>
    <string name="istanbul">Стамбул</string>
    <string name="sochi">Сочи</string>

    <!--    fragment_departure-->
    <string name="view_all_tickets">Посмотреть все билеты</string>
    <string name="destination_place">Место назначения</string>
    <string name="icon_back_arrow_departure_fragment">icon_back_arrow_departure_fragment</string>

    <!--    quick_buttons-->
    <string name="hot_tickets_fragment">Горячие билеты</string>
    <string name="complex_route">Сложный\nмаршрут</string>

</resources>