<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recycler_view_offer_item"
    android:layout_width="132dp"
    android:layout_height="213dp"
    android:layout_margin="4dp"
    android:background="@color/black"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_offer_image"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:contentDescription="@string/artist_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_launcher_foreground" />

    <TextView
        android:id="@+id/item_text"
        android:layout_width="132dp"
        android:layout_height="19dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:text="@string/name_second_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:transitionName="shared_element_transition" />

    <TextView
        android:id="@+id/item_offer_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="left|fill_vertical"
        android:text="@string/destination_city"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="2dp"
            android:contentDescription="@string/icon_offer_plane"
            app:srcCompat="@drawable/icon_offer_plane" />

        <TextView
            android:id="@+id/item_offer_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|fill_vertical"
            android:text="от 22 264 Р"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
